--- a/Week5/Week2Oefening1/Week2Oefening1.csproj
+++ b/Week5/Week2Oefening1/Week2Oefening1.csproj
@@ -231,29 +231,40 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201503102025330_Update.cs" />
-    <Compile Include="Migrations\201503102025330_Update.Designer.cs">
-      <DependentUpon>201503102025330_Update.cs</DependentUpon>
+    <Compile Include="Migrations\201503111646089_UpdateDB20150311.cs" />
+    <Compile Include="Migrations\201503111646089_UpdateDB20150311.Designer.cs">
+      <DependentUpon>201503111646089_UpdateDB20150311.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201503111748556_UpdateDB20150311b.cs" />
+    <Compile Include="Migrations\201503111748556_UpdateDB20150311b.Designer.cs">
+      <DependentUpon>201503111748556_UpdateDB20150311b.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BasketItem.cs" />
-    <Compile Include="Models\BasketItemCountPrice.cs" />
+    <Compile Include="Models\DAL\IOrderRepository.cs" />
+    <Compile Include="Models\IItemProduct.cs" />
+    <Compile Include="Models\ItemCountPrice.cs" />
     <Compile Include="Models\DAL\BasketItemRepository.cs" />
     <Compile Include="Models\DAL\DeviceRepository.cs" />
     <Compile Include="Models\DAL\GenericRepository.cs" />
     <Compile Include="Models\DAL\IBasketItemRepository.cs" />
     <Compile Include="Models\DAL\IDeviceRepository.cs" />
     <Compile Include="Models\DAL\IGenericRepository.cs" />
+    <Compile Include="Models\DAL\OrderRepository.cs" />
     <Compile Include="Models\Framework.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Device.cs" />
+    <Compile Include="Models\Order.cs" />
+    <Compile Include="Models\OrderLine.cs" />
     <Compile Include="Models\OS.cs" />
     <Compile Include="Models\Services\BasketItemService.cs" />
     <Compile Include="Models\Services\DeviceService.cs" />
     <Compile Include="Models\Services\IBasketItemService.cs" />
     <Compile Include="Models\Services\IDeviceService.cs" />
+    <Compile Include="Models\Services\IOrderService.cs" />
+    <Compile Include="Models\Services\OrderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -345,17 +356,20 @@
     <Content Include="Views\Catalog\Add.cshtml" />
     <Content Include="Views\Catalog\rentPartial.cshtml" />
     <Content Include="Views\Basket\Index.cshtml" />
+    <Content Include="Views\Basket\Checkout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201503102025330_Update.resx">
-      <DependentUpon>201503102025330_Update.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201503111646089_UpdateDB20150311.resx">
+      <DependentUpon>201503111646089_UpdateDB20150311.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201503111748556_UpdateDB20150311b.resx">
+      <DependentUpon>201503111748556_UpdateDB20150311b.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
