--- a/Week8quadris/Webshop.BusinessLayer/Webshop.BusinessLayer.csproj
+++ b/Week8quadris/Webshop.BusinessLayer/Webshop.BusinessLayer.csproj
@@ -53,34 +53,33 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context\WebshopContext.cs" />
-    <Compile Include="Migrations\201504211905516_InitDb.cs" />
-    <Compile Include="Migrations\201504211905516_InitDb.Designer.cs">
-      <DependentUpon>201504211905516_InitDb.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201504211918300_InitDb1.cs" />
-    <Compile Include="Migrations\201504211918300_InitDb1.Designer.cs">
-      <DependentUpon>201504211918300_InitDb1.cs</DependentUpon>
+    <Compile Include="Migrations\201504212300036_InitDb.cs" />
+    <Compile Include="Migrations\201504212300036_InitDb.Designer.cs">
+      <DependentUpon>201504212300036_InitDb.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\DeviceRepository.cs" />
+    <Compile Include="Repositories\GenericRepository.cs" />
+    <Compile Include="Repositories\IDeviceRepository.cs" />
+    <Compile Include="Repositories\IGenericRepository.cs" />
+    <Compile Include="Services\DeviceService.cs" />
+    <Compile Include="Services\IDeviceService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Webshop.Models\Webshop.Models.csproj">
+    <EmbeddedResource Include="Migrations\201504212300036_InitDb.resx">
+      <DependentUpon>201504212300036_InitDb.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Webshop.Models\Webshop.Models.csproj">
       <Project>{18db8ce8-c43d-4f8a-95bc-fc82c39f2843}</Project>
       <Name>Webshop.Models</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201504211905516_InitDb.resx">
-      <DependentUpon>201504211905516_InitDb.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201504211918300_InitDb1.resx">
-      <DependentUpon>201504211918300_InitDb1.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
