--- a/Week8quadris/Webshop.BusinessLayer/Webshop.BusinessLayer.csproj
+++ b/Week8quadris/Webshop.BusinessLayer/Webshop.BusinessLayer.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Calculations\TotalPriceCalculator.cs" />
     <Compile Include="Context\WebshopContext.cs" />
     <Compile Include="Migrations\201504271945108_InitDb270415.cs" />
     <Compile Include="Migrations\201504271945108_InitDb270415.Designer.cs">
@@ -87,11 +88,19 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ApplicationUserRepository.cs" />
+    <Compile Include="Repositories\BasketItemRepository.cs" />
     <Compile Include="Repositories\DeviceRepository.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
+    <Compile Include="Repositories\IApplicationUserRepository.cs" />
+    <Compile Include="Repositories\IBasketItemRepository.cs" />
     <Compile Include="Repositories\IDeviceRepository.cs" />
     <Compile Include="Repositories\IGenericRepository.cs" />
+    <Compile Include="Services\ApplicationUserService.cs" />
+    <Compile Include="Services\BasketItemService.cs" />
     <Compile Include="Services\DeviceService.cs" />
+    <Compile Include="Services\IApplicationUserService.cs" />
+    <Compile Include="Services\IBasketItemService.cs" />
     <Compile Include="Services\IDeviceService.cs" />
   </ItemGroup>
   <ItemGroup>
