--- a/Week8quadris/Webshop.Models/Webshop.Models.csproj
+++ b/Week8quadris/Webshop.Models/Webshop.Models.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Device.cs" />
     <Compile Include="Framework.cs" />
     <Compile Include="OS.cs" />
+    <Compile Include="PresentationModels\BasketItemTotalPricePM.cs" />
     <Compile Include="PresentationModels\DeviceBasketItemPM.cs" />
     <Compile Include="PresentationModels\DevicePM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
