--- a/Week10/Iotshop.BusinessLayer/Iotshop.BusinessLayer.csproj
+++ b/Week10/Iotshop.BusinessLayer/Iotshop.BusinessLayer.csproj
@@ -137,9 +137,9 @@
   <ItemGroup>
     <Compile Include="Calculations\TotalPriceCalculator.cs" />
     <Compile Include="Context\IotshopContext.cs" />
-    <Compile Include="Migrations\201505031739441_InitDb.cs" />
-    <Compile Include="Migrations\201505031739441_InitDb.Designer.cs">
-      <DependentUpon>201505031739441_InitDb.cs</DependentUpon>
+    <Compile Include="Migrations\201505031914316_DellM38001.cs" />
+    <Compile Include="Migrations\201505031914316_DellM38001.Designer.cs">
+      <DependentUpon>201505031914316_DellM38001.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -181,8 +181,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201505031739441_InitDb.resx">
-      <DependentUpon>201505031739441_InitDb.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201505031914316_DellM38001.resx">
+      <DependentUpon>201505031914316_DellM38001.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
